issues with spacing, but done

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,39 +4,88 @@ body {
 
 input {
     display: block;
-    background-color: #E8F0FE;
-    width: 80%;
-    box-sizing: border-box;
-    text-align: center
-    
+    background-color: #FFFFFF;
+    width: 100%;
+    border-radius: 4px;
+    margin: 1% auto;
+    text-align: left;
+    box-sizing: border-box; 
+    padding: 7px;
+    border: 1px solid #807f7f;  
 }
 
-div {
-    text-align: center;
+input:focus {
+    outline: none;
+    box-shadow: 0 0 0 2px orange;
 }
+
+button {
+    border-radius: 4px;
+    border: 1px solid #807f7f;
+    padding: 7px;
+
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+h1 {
+    font-size: 24pt;
+    font-weight: normal;
+    margin: 5% 0%;
+    padding-left: 0;
+}
+
+h2 {
+    vertical-align: middle;
+    width: 33%; 
+    text-align: center; 
+    border-bottom: 1px solid rgb(154, 153, 153);
+    line-height: 0.1em;
+    margin-top: 25px;
+    text-decoration: none;
+    font-size: 8pt;
+    margin-left: 33.3%;
+    color: rgb(154, 153, 153);
+} 
+
+h2 span { 
+    background:#fff; 
+    padding:0 10px; 
+}
+
+a {
+    text-decoration: none;
+    color: #146eb4;
+}
+
+a:hover {
+    color: #ff9900;
+    text-decoration: underline;
+}
+
 
 .logo {
-    display: flex;
-    justify-content: center;
     width: 100%;
     text-align: center;
-    
-     
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
 }
 
 .sign-in {
     align-items: center;
-    margin: 0 30% 0 30%;
+    margin: 0 33% 0 33%;
     border: 1px solid #b6b6b6;
-    border-radius: 5px; 
+    border-radius: 5px;
+    padding: 20px 40px; 
 }
 
-.sign-in-text {
-
-}
 
 .email-enter {
-    text-align: center;
+    text-align: left;
 }
 
 .email-container {
@@ -44,9 +93,64 @@ div {
 }
 
 .button-continue {
+    margin: 5% 0;
+    display: block;
+    width: 100%;
+    box-sizing: border-box; 
+    background: linear-gradient(to top, #f0c14b 0%, #ffffcc 100%);
+}
+
+.button-create-account {
+    margin: 2% 0;
     display: block;
     background-color: yellow;
-    width: 100%;
+    width: 33%;
+    margin-left: 33.3%;
     box-sizing: border-box;
+    background: radial-gradient(circle, rgba(223,226,232,1) 35%, rgba(243,248,249,1) 100%);
+}
 
+.continue-rainforest {
+    padding-top: 5px;
+    font-size: 9pt;
+}
+
+.help-container {
+    display: flex;
+    justify-content:flex-start;
+    align-items: center;
+    flex-direction: row;
+}
+
+.help-text {
+    font-size: 10pt;
+    padding-left: 10px;
+}
+
+.fa-caret-right {
+    color: #646262;
+    font-size: 12px;
+}
+
+.footer-items {
+    font-size: 10pt;
+    list-style-type: none;
+    display: flex;
+    justify-content: space-between;
+    width: 33%;
+    margin-left: 30%;
+}
+
+.copyright {
+    font-size: 10pt;
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    color: rgb(154, 153, 153);
+}
+
+.container-footer {
+    background: radial-gradient(circle, rgba(223,226,232,1) 35%, rgba(243,248,249,1) 100%);
+    padding-top: 10px;
+    padding-bottom: 30px;
 }
